--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pw_tods",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
