--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pw_tods",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://corbettamarco.github.io/Tod-s-NPS",
   "dependencies": {
     "@chakra-ui/icons": "^2.0.18",
     "@chakra-ui/react": "^2.5.5",
